feat: make use of cavern for new user allocations
BREAKING CHANGE: